Switch to vcpkg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 3.14)
 project(cliprogress
         LANGUAGES CXX
-        VERSION 0.1.0)
+        VERSION 0.2.0)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 include(CTest)
 option(CLIPROGRESS_BUILD_EXAMPLES "Build example program" ON)
-option(CLIPROGRESS_BUILD_TESTING "Build tests" ON)
+option(CLIPROGRESS_BUILD_TESTS "Build tests" ON)
 
-add_library(cliprogress STATIC)
+find_package(fmt CONFIG REQUIRED)
+find_package(gsl-lite CONFIG REQUIRED)
+find_package(PalSigslot CONFIG REQUIRED)
+find_package(termcontrol CONFIG REQUIRED)
+
+add_library(cliprogress)
 add_library(cliprogress::cliprogress ALIAS cliprogress)
 
 target_compile_features(cliprogress PUBLIC cxx_std_20)
@@ -18,18 +23,17 @@ target_include_directories(cliprogress PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
 
-include(external/external.cmake)
-
 target_link_libraries(cliprogress
     PUBLIC
         termcontrol::termcontrol
         Pal::Sigslot
         gsl::gsl-lite-v1
+        fmt::fmt
 )
 
 add_subdirectory(src)
 
-if (CLIPROGRESS_BUILD_TESTING)
+if (CLIPROGRESS_BUILD_TESTS)
     add_subdirectory(tests)
 endif()
 
